# agno

./: CLAUDE.md  README.md  walkthrough.md
cookbook/: pyproject.toml
cookbook/00_quickstart/: README.md  agent_search_over_knowledge.py  agent_with_guardrails.py  agent_with_memory.py  agent_with_state_management.py  agent_with_storage.py  agent_with_structured_output.py  agent_with_tools.py  agent_with_typed_input_output.py  custom_tool_for_self_learning.py  human_in_the_loop.py  multi_agent_team.py  requirements.txt  sequential_workflow.py
cookbook/01_demo/: README.md
