[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.1",
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
]
